--- a/src/app/features/user/components/form-user/form-user.component.html
+++ b/src/app/features/user/components/form-user/form-user.component.html
@@ -6,25 +6,25 @@
     </h1>
       <form [formGroup]="formCrear">
 
-        <mat-form-field appearance="fill">
+        <mat-form-field >
           <mat-label>Nombre</mat-label>
           <input type="text" matInput formControlName="nameFormControl" placeholder="Raúl">
           <mat-error>{{errorMessageName}}</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field >
           <mat-label>Apellidos</mat-label>
           <input type="text" matInput formControlName="surnameFormControl" placeholder="Bravo Pradanas">
           <mat-error>{{errorMessageSurname}}</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field >
           <mat-label>Email</mat-label>
           <input type="email" matInput formControlName="emailFormControl" placeholder="Ex. raul@gmail.com">
           <mat-error>{{errorMessageEmail}}</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field >
           <mat-label>Contraseña</mat-label>
           <input type="password" matInput formControlName="passFormControl" placeholder="********">
           <mat-error>{{errorMessagePass}}</mat-error>
