Created auth components connected with firebase

--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -15,19 +15,13 @@
       <div class="formGroup">
         <span class="or"><span class="orInner">Or</span></span>
       </div>
-      <!-- Calling GoogleAuth Api from AuthService -->
-      <div class="formGroup">
-        <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
-          <i class="fab fa-google-plus-g"></i>
-          Log in with Google
-        </button>
-      </div>
+
       <div class="forgotPassword">
         <span routerLink="/forgot-password">Forgot Password?</span>
       </div>
     </div>
     <div class="redirectToLogin">
-      <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>
+      <span>Don't have an account?<span class="redirect" routerLink="/sign-up"> Sign Up</span></span>
     </div>
   </div>
 </div>
