--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -20,11 +20,23 @@
   margin-left: 50px;
 }
 
-table {
-  width: 100%;
+.categorie{
+  font-weight: bold;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+.info{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.botonProd{
+  margin: 1em;
+  margin-left: 0 auto;
+  flex: 1 1 auto;
 }
