--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -20,7 +20,7 @@
   margin-left: 50px;
 }
 
-.categorie{
+.category{
   font-weight: bold;
 }
 
@@ -39,4 +39,13 @@
   margin: 1em;
   margin-left: 0 auto;
   flex: 1 1 auto;
+}
+
+.expansionContent{
+  display: flex;
+  flex-direction: column;
+}
+
+.listCategory{
+  margin: 2em;
 }
