Refactor SHOP + CSS

--- a/src/app/features/shop/components/shops-list/shops-list.component.scss
+++ b/src/app/features/shop/components/shops-list/shops-list.component.scss
@@ -20,3 +20,30 @@
 table{
   width:100%;
 }
+.expansionContent {
+
+  display: flex;
+
+  flex-direction: column;
+
+}
+
+.info{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.shop{
+  font-weight: bold;
+}
+
+.botonShop{
+  margin: 1em;
+  margin-left: 0 auto;
+  flex: 1 1 auto;
+}
+
+.listShop{
+  margin: 2em;
+}
