Se implementa el boton de inciar sesión

--- a/src/app/features/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/features/authentication/components/forgot-password/forgot-password.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="redirectToLogin">
-      <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+      <span>Go back to ? <button class="redirect" routerLink="/sign-in">Log In</button></span>
     </div>
   </div>
 </div>
