--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -17,11 +17,11 @@
       </div>
 
       <div class="forgotPassword">
-        <span routerLink="/forgot-password">Forgot Password?</span>
+        <button routerLink="/forgot-password">Forgot Password?</button>
       </div>
     </div>
     <div class="redirectToLogin">
-      <span>Don't have an account?<span class="redirect" routerLink="/sign-up"> Sign Up</span></span>
+      <span>Don't have an account?<button class="redirect" routerLink="/sign-up"> Sign Up</button></span>
     </div>
   </div>
 </div>
