--- a/src/app/features/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/features/authentication/components/sign-up/sign-up.component.html
@@ -34,7 +34,7 @@
     <div class="redirectToLogin">
       <span
         >Already have an account?
-        <span class="redirect" routerLink="/sign-in">Log In</span></span
+        <button class="redirect" routerLink="/sign-in">Log In</button></span
       >
     </div>
   </div>
