--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-list>
     <div mat-subheader>Modules</div>
-    
+
     <mat-divider></mat-divider>
 
     <mat-list-item *ngFor="let module of modules; let i = index">
@@ -11,3 +11,5 @@
       </a>
     </mat-list-item>
 </mat-list>
+
+<app-sign-in-sidebar></app-sign-in-sidebar>
