--- a/src/app/features/authentication/components/verify-email/verify-email.component.html
+++ b/src/app/features/authentication/components/verify-email/verify-email.component.html
@@ -9,7 +9,7 @@
 
       <!-- Calling SendVerificationMail() method using authService Api -->
       <div class="formGroup">
-        <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
+        <button type="button" class="btn btnPrimary" (click)="authService.sendVerificationMail()">
           <i class="fas fa-redo-alt"></i>
           Resend Verification Email
         </button>
