--- a/src/app/features/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/features/authentication/components/sign-up/sign-up.component.html
@@ -25,7 +25,7 @@
           type="button"
           class="btn btnPrimary"
           value="Sign Up"
-          (click)="authService.SignUp(userEmail.value, userPwd.value)"
+          (click)="authService.signUp(userEmail.value, userPwd.value)"
         />
       </div>
       <div class="formGroup">
