fix Category && cambio routing HOME a USER

--- a/src/app/features/user/components/form-user/form-user.component.html
+++ b/src/app/features/user/components/form-user/form-user.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel (opened) = "panelOpenState = true" (closed) = "panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Añadir producto
+        Añadir usuario
         <mat-icon aria-hidden="false">people</mat-icon>
       </mat-panel-title>
     </mat-expansion-panel-header>
