Fixed duplicated users in users module, and fixed delete button

--- a/src/app/features/user/components/list-user/list-user.component.html
+++ b/src/app/features/user/components/list-user/list-user.component.html
@@ -9,7 +9,7 @@
         >
           <mat-expansion-panel-header>
             <div class="info">
-              <button mat-raised-button class="buttonUser">
+              <button mat-raised-button class="buttonUser" (click)="deleteUser(user)">
                 <mat-icon> delete_forever </mat-icon>
               </button>
               <mat-panel-title>
