--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -20,9 +20,9 @@
           <mat-form-field class="formContainer" >
             <mat-label> Categories </mat-label>
             <mat-select class = "input" formControlName = "categories" required>
-              <mat-option *ngFor="let cat of categories" [value]="cat">
-                {{ cat }}
-              </mat-option>
+              <ng-container *ngFor="let cat of categories">
+                <mat-option *ngIf="cat.active===true" [value]="cat">{{ cat.name }}</mat-option>
+              </ng-container>
             </mat-select>
           </mat-form-field>
         </div>
