Added dialog in shop-list to see product list and modified shop service to save selected shop

--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -35,8 +35,7 @@
         <mat-expansion-panel
           (opened)="panelOpenState = true"
           (closed)="panelOpenState = false"
-        >
-          <mat-expansion-panel-header>
+        ><mat-expansion-panel-header>
             <div class="info">
               <button mat-raised-button class="botonShop" (click)="deleteShop(shop)">
                 <mat-icon> delete_forever </mat-icon>
@@ -51,12 +50,15 @@
           <div class="hiddenIfo">
             <div class="firstColumnHidden">
               <mat-list role="list">
+                <br>
                 <mat-list-item role="listitem">
                   <div class="expansionContent">
                     <span> Nombre: {{ shop.name }} </span>
                     <span> Direccion: {{ shop.address.street }} </span>
+                    <button mat-raised-button color = "accent" (click) = "openProductList(shop.name)">Ver productos</button>
                   </div>
                 </mat-list-item>
+                <br>
               </mat-list>
             </div>
           </div>
