Fixed category input in product form and fixed adding duplicated products

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -21,7 +21,7 @@
             <mat-label> Categories </mat-label>
             <mat-select class = "input" formControlName = "categories" required>
               <mat-option *ngFor="let cat of categories" [value]="cat">
-                {{ cat }}
+                {{ cat.name }}
               </mat-option>
             </mat-select>
           </mat-form-field>
