Asignamos categorias a productos

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -90,7 +90,7 @@
                 <mat-list-item role="listitem">
                   <span> Categorias: </span>
                   <span>
-                    {{ product.categories}}
+                    {{product.categories[0].name }}
                   </span>
                 </mat-list-item>
               </mat-list>
