--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -1,1 +1,24 @@
-<p>products-list-shop works!</p>
+<mat-list role="list" class="listShop">
+  <mat-divider></mat-divider>
+  <ng-container *ngFor="let shop of shops">
+    <div>
+      <mat-list-item role="listitem" class="shop">
+        {{shop.name}}
+      </mat-list-item>
+      <mat-list role="list">
+        <br>
+        <mat-list-item role="productList">
+          <ng-container *ngFor="let listProduct of listProducts">
+            <span> Nombre: {{ listProducts.name }} </span>
+            <span> Direccion: {{ listProducts }} </span>
+          </ng-container>
+        </mat-list-item>
+        <br>
+      </mat-list>
+      <mat-divider></mat-divider>
+    </div>
+  </ng-container>
+</mat-list>
+<button mat-raised-button color="accent">
+  <mat-icon>close</mat-icon>
+</button>
